<resources>
    <string name="app_name">物流追踪</string>
    <!-- Strings related to login -->
    <string name="login_title">管件物流追踪系统</string>
    <string name="login_btn">登陆</string>
    <string name="login_num">工号:</string>
    <string name="login_hint">请输入工号</string>
    <!-- Strings related to menu -->
    <string name="pile">辅助分堆</string>
    <string name="qr_bind">二维码绑定</string>
    <string name="back_discern">回厂上报</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
