<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_back"
    >

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="#FFFF"
        android:textSize="40sp" />
    <LinearLayout
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            />
        <TextView
            android:id="@+id/login_tv_user_num"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="工号:"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffff"
            />

        <EditText
            android:id="@+id/loginNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:hint="@string/login_hint"
            android:textColorHint="#FFFF"
            android:inputType="number"
            android:textSize="18sp"
            android:theme="@style/MyEditText"
            android:textCursorDrawable="@null"

            />
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:text="@string/login_btn"
        android:textSize="18sp" />

</LinearLayout>
