<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="5dp"
        android:background="#0084cf"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/jari" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/login_title"
            android:textColor="#FFFF"
            android:textSize="35sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1.6"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/qrScan"
                android:orientation="vertical"
                android:layout_marginRight="2dp"
                android:background="#01e188"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffff"
                    android:textSize="25sp"
                    android:background="@drawable/erweima"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qr_bind"
                    android:textColor="#ffff"
                    android:textSize="25sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/backDiscern"
                android:orientation="vertical"
                android:background="#eb6877"
                android:gravity="center"
                android:layout_marginLeft="2dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffff"
                    android:textSize="25sp"
                    android:background="@drawable/shibie"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_discern"
                    android:textColor="#FFFF"
                    android:textSize="25sp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#67b166"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="1"
                android:id="@+id/pillPile"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/pile"
                    android:textColor="#FFFF"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#4f489e"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="1"
                android:id="@+id/handover"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:text="交接单查询"
                    android:textColor="#FFFF"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#1aa110"
                android:layout_weight="1"
                android:id="@+id/handoverStatus"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="交接单状态查询"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="#FFFF"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@drawable/menu"

        ></LinearLayout>

</LinearLayout>
